--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,5 +2,9 @@
     "version" : 2,
     "name" : "project-server",
     "builds" : [{ "src": "index.js", "use" : "@vercel/node" }],
-    "routes" : [{"src": "/(.*)", "dest": "/server.js"}]
+    "routes" : [{"src": "/(.*)", "dest": "/server.js"}],
+    "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
+
