--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,7 +2,7 @@
     "version" : 2,
     "name" : "project-server",
     "builds" : [{ "src": "index.js", "use" : "@vercel/node" }],
-    "routes" : [{"src": "/(.*)", "dest": "/server.js"}],
+    "routes" : [{"src": "/(.*)", "dest": "/index.js"}],
     "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
