--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,9 +2,6 @@
     "version" : 2,
     "name" : "project-server",
     "builds" : [{ "src": "index.js", "use" : "@vercel/node" }],
-    "routes" : [{"src": "/(.*)", "dest": "/index.js"}],
-    "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+    "routes" : [{"src": "/(.*)", "dest": "/index.js"}]
 }
 
